@@ -108,6 +108,6 @@ Any questions?
 
 
 ==========
- version: openonload-201205-p2
-revision: adec79bbc4b7 (ool201205) openonload-201205-p2
-    date: Fri Jun  8 16:36:51 BST 2012
+ version: openonload-201205-p3
+revision: a56c94e1f619 (ool201205) openonload-201205-p3
+    date: Wed Jun 20 15:19:54 BST 2012
